src/test/ui/consts/const-eval/assign-to-static-within-other-static-2.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/assign-to-static-within-other-static-2.rs:27:5
   |
LL |     *FOO.0.get() = 5; //~ ERROR could not evaluate static initializer
   |     ^^^^^^^^^^^^^^^^ tried to modify a static's initial value from another static's initializer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
